--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
+    "aws-sdk": "^2.872.0",
     "axios": "^0.21.1"
   },
   "devDependencies": {
