--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "aws-sdk": "^2.872.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "mime-types": "^2.1.30"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
+    "@types/mime-types": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "@vercel/ncc": "^0.25.1",
